--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "uuid": "^9.0.1"
   }
 }
