--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "angular": "^1.8.3",
     "body-parser": "^1.20.2",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "firebase": "^10.5.0",
     "font-awesome": "^4.7.0",
@@ -37,8 +39,11 @@
     "ngx-captcha": "^13.0.0",
     "ngx-cookie-service": "^15.0.0",
     "ngx-mat-intl-tel-input": "^5.0.0",
+    "path-browserify": "^1.0.1",
     "rxjs": "~7.5.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.6.2",
+    "url": "^0.11.3",
     "yarn": "^1.22.19",
     "zone.js": "~0.12.0"
   },
@@ -53,7 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "typescript": "^4.9.5"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 15.0.0.",
   "main": "index.js",
