--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mdi/font": "^7.4.47",
     "angular": "^1.8.3",
     "body-parser": "^1.20.2",
     "browserify-zlib": "^0.2.0",
@@ -34,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0",
+    "jspdf": "^2.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.0.0",
     "ngx-bootstrap": "^6.2.0",
@@ -53,6 +55,7 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jspdf": "^2.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
