signature done by prabu

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-captcha": "^13.0.0",
     "ngx-cookie-service": "^15.0.0",
     "ngx-mat-intl-tel-input": "^5.0.0",
+    "ngx-signaturepad": "^0.0.10",
     "path-browserify": "^1.0.1",
     "rxjs": "~7.5.0",
     "stream-browserify": "^3.0.0",
